--- a/css/animation.css
+++ b/css/animation.css
@@ -37,3 +37,18 @@
       display: none;
    }
 }
+
+@keyframes shake {
+   0% {
+      transform: translate3d(-2px, 0, 0);
+   }
+   30% {
+      transform: translate3d(2px, 0, 0);
+   }
+   60% {
+      transform: translate3d(-2px, 0, 0);
+   }
+   100% {
+      transform: translate3d(0px, 0, 0);
+   }
+}
